# Hologram_Display

./: .gitignore  CMakeLists.txt  README.md
config/: default.cfg  test_128x64.cfg  test_1_16scan.cfg  tmp.cfg
include/: Config.h  DMAOutput.h  FrameBuffer.h  HallSensor.h  LEDOutput.h  Protocol.h  TimingLogger.h  UDPReceiver.h
src/: Config.cpp  DMAOutput.cpp  FrameBuffer.cpp  HallSensor.cpp  LEDOutput.cpp  Protocol.cpp  TimingLogger.cpp  UDPReceiver.cpp  hub75_dma.c  hub75_dma.h  main.cpp
tests/: test_colors.c  test_dma.c  test_dma_rate.c  test_framebuffer.cpp  test_hall.cpp  test_led.cpp  test_led_rate.cpp  test_mailbox.c
